--- a/css/style.css
+++ b/css/style.css
@@ -1105,11 +1105,11 @@ table {
     background-image: url("../images/white_arrow_ie.png");
   }
 
-  .secondary-nav ul {
+  .secondary-nav ul, #secondary-nav ul {
     margin: 0;
   }
 
-  .secondary-nav li {
+  .secondary-nav li, #secondary-nav li {
     display: inline-block;
     margin: 0 10px 0 0;
     padding: 0;
@@ -1117,10 +1117,10 @@ table {
     font-size: 0.875em;
     line-height: 1.5em;
   }
-  .secondary-nav li:last-of-type {
+  .secondary-nav li:last-of-type, #secondary-nav li:last-of-type {
     border-bottom: 0;
   }
-  .secondary-nav li a {
+  .secondary-nav li a, #secondary-nav li a {
     border-bottom: 0;
     padding-top: 0.375em;
     padding-bottom: 0.375em;
@@ -1164,11 +1164,34 @@ table {
     padding: 0 10px;
   }
 
-  nav.pagination:nth-of-type(3n) ul {
+  nav.pagination {
+    overflow: visible;
+  }
+  nav.pagination .pagination_list {
+    padding-top: 0;
+  }
+  nav.pagination .pagination_list li {
+    height: auto;
+  }
+
+  nav.pagination:nth-of-type(3), #content > .pagination:nth-of-type(2) {
+    width: 100%;
+    height: 96px;
+  }
+
+  nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
     border-top: 1px solid #ccc;
     border-bottom: 0;
     padding-top: 1.5em;
     margin-bottom: 1.5em;
+  }
+
+  #content > nav.pagination:nth-of-type(2) {
+    width: 47%;
+    height: auto;
+    padding-top: 0;
+    margin-bottom: 0;
+    border-top: 0;
   }
 
   .pagination_list {
@@ -1814,27 +1837,27 @@ table {
     margin-bottom: 1.5em;
   }
 
-  .secondary-nav {
+  .secondary-nav, #secondary-nav {
     border-bottom: 1px solid #ccc;
     font-size: 1.125em;
   }
-  .secondary-nav a {
+  .secondary-nav a, #secondary-nav a {
     padding: 0.5em 1em 0.5em;
     color: #666;
     border-bottom: 0;
   }
-  .secondary-nav ul {
+  .secondary-nav ul, #secondary-nav ul {
     margin: 0 0 -1px 0;
   }
-  .secondary-nav li {
+  .secondary-nav li, #secondary-nav li {
     display: inline-block;
     padding: 0;
     border: 1px solid #ccc;
   }
-  .secondary-nav .active {
+  .secondary-nav .active, #secondary-nav .active {
     border-bottom-color: #fff;
   }
-  .secondary-nav .current a {
+  .secondary-nav .current a, #secondary-nav .current a {
     background: #fff;
     color: #333;
     font-weight: bold;
@@ -1845,11 +1868,15 @@ table {
   }
 
   /* == Browse Items == */
-  nav.pagination {
+  .pagination {
     width: 47%;
     overflow: hidden;
     float: left;
     padding-bottom: 1.5em;
+  }
+
+  nav.pagination {
+    overflow: visible;
   }
 
   .pagination_list {
